# C-_Projects

Simple_Banking/: CMakeLists.txt
Simple_Banking/include/: Account.h  Account_Collection.h  Checking_Account.h  Controller.h  Credit_Generator.h  Credit_verifier.h  I_Printable.h  Savings_Account.h  Screen.h  Trust_Account.h
Simple_Banking/src/: main.cpp
Simple_Banking/src/account/: Account.cpp  Account_Collection.cpp  Checking_Account.cpp  I_Printable.cpp  Savings_Account.cpp  Trust_Account.cpp
Simple_Banking/src/backend/: Controller.cpp  Credit_Generator.cpp  Credit_verifier.cpp
Simple_Banking/src/screen/: Screen.cpp
